# nagao-disco-bot

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: shuttle-deploy.yml
docker/rust/: Dockerfile  Dockerfile.release
src/: lib.rs  main.rs
src/models/: chatgpt_api.rs
tests/: test.rs
