[package]
name = "workspace"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.11.0", features = ["bot-serenity"] }
anyhow = "1.0.69"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
shuttle-secrets = "0.11.0"
tracing = "0.1.37"
dotenv = "0.15.0"
reqwest = "0.11.14"
serde = "1.0.156"
serde_json = "1.0.94"
